--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-output "instance_id" {
-  description = "The ID of the EC2 instance"
-  value       = aws_instance.my_ec2.id
-  {
-      
-      test.tf
-      main.tfi
+*.pdf
+*.tf
+
+
 
